--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "php": "^8.4",
         "simbiat/db-query": "^1.0.2",
         "simbiat/db-manager": "^1.0.1",
+        "simbiat/db-installer": "^1",
         "ext-mbstring": "*"
     },
     "replace": {
